--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "cross-env NODE_ENV=test jest"
+    "test": "cross-env NODE_ENV=test jest",
+    "cypress:open": "cross-env NODE_ENV=cypress open",
+    "cypress:start": "start-server-and-test 'npm run start:test' 3000 'npm run cypress:open'"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.18.0",
     "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
@@ -18,10 +21,13 @@
     "next": "14.2.28",
     "react": "^18",
     "react-dom": "^18",
+    "start-server-and-test": "^2.0.11",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@eslint/config-helpers": "^0.2.1",
+    "@eslint/js": "^9.25.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -31,14 +37,19 @@
     "@types/react-dom": "^18.3.6",
     "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
-    "eslint": "^8",
+    "cypress": "^14.3.2",
+    "eslint": "^9.25.1",
     "eslint-config-next": "14.2.28",
+    "eslint-config-xo": "^0.47.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.31.0"
   }
 }
