--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c3dlZXBpbmctc3F1aXJyZWwtMC5jbGVyay5hY2
 CLERK_SECRET_KEY=sk_test_La7NmYaiPoz8FNhWQYSRAB4hJZMTwazenbRmCvknM6
 
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000/
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
