--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
   "dependencies": {
     "@clerk/nextjs": "^6.18.0",
     "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.9",
     "@tailwindcss/typography": "^0.5.16",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
     "next": "14.2.28",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "start-server-and-test": "^2.0.11",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
