--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "start-server-and-test": "^2.0.11",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/config-helpers": "^0.2.1",
