--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
     "cypress": "^14.3.2",
+    "daisyui": "^5.0.35",
     "eslint": "^9.25.1",
     "eslint-config-next": "14.2.28",
     "eslint-config-xo": "^0.47.0",
