--- a/package.json
+++ b/package.json
@@ -1,64 +1,105 @@
 {
-  "name": "ecommerce",
+  "type": "ecommerce",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "cross-env  NODE_ENV=development && next dev",
+    "build": "cross-env NODE_ENV=production && next build",
+    "start": "cross-env NODE_ENV=test && next start",
     "lint": "next lint",
-    "test": "cross-env NODE_ENV=test jest",
-    "cypress:open": "cross-env NODE_ENV=cypress open",
-    "cypress:start": "start-server-and-test 'npm run start:test' 3000 'npm run cypress:open'"
+    "test": "cross-env NODE_ENV=testing  jest",
+    "test:watch": "jest --watch",
+    "start:test": "cross-env NODE_ENV=test && next build && next start",
+    "cypress:open": "cross-env NODE_ENV=test cypress open",
+    "cypress:start": "start-server-and-test 'npm run start:test' 3000 'npm run cypress:open'  "
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.18.0",
-    "@radix-ui/react-dialog": "^1.1.11",
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-tabs": "^1.1.9",
-    "@tailwindcss/typography": "^0.5.16",
-    "axios": "^1.9.0",
-    "class-variance-authority": "^0.7.1",
+    "@clerk/nextjs": "^5.3.1",
+    "@clerk/themes": "^2.1.20",
+    "@clerk/types": "^4.14.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
+    "@paypal/react-paypal-js": "^8.5.0",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.3.0",
+    "@tanstack/react-table": "^8.20.5",
+    "@types/algoliasearch": "^4.0.0",
+    "@vercel/analytics": "^1.3.1",
+    "algoliasearch": "^5.0.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.503.0",
-    "next": "14.2.28",
+    "formik": "^2.4.6",
+    "framer-motion": "^11.3.28",
+    "lucide-react": "^0.428.0",
+    "next": "14.2.5",
     "next-themes": "^0.4.6",
+    "proxy-memoize": "^3.0.1",
+    "random-email": "^1.0.3",
+    "random-email-password": "^1.0.1",
+    "randomstring": "^1.3.0",
     "react": "^18",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18",
-    "react-icons": "^5.5.0",
-    "start-server-and-test": "^2.0.11",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "react-instantsearch": "^7.12.4",
+    "react-medium-image-zoom": "^5.2.8",
+    "react-number-format": "^5.4.0",
+    "react-redux": "^9.1.2",
+    "react-spinners": "^0.14.1",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "swiper": "^11.1.9",
     "swr": "^2.3.3",
-    "tailwind-merge": "^3.2.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.3"
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/config-helpers": "^0.2.1",
-    "@eslint/js": "^9.25.1",
+    "@babel/core": "^7.25.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.24.8",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@clerk/testing": "^1.2.15",
+    "@eslint/js": "^9.9.0",
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20.17.31",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.6",
-    "autoprefixer": "^10.4.21",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "@types/node": "^20",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.4",
+    "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
-    "cypress": "^14.3.2",
-    "daisyui": "^5.0.35",
-    "eslint": "^9.25.1",
-    "eslint-config-next": "14.2.28",
-    "eslint-config-xo": "^0.47.0",
-    "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.0.0",
+    "cypress": "^13.13.3",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "15.0.0-rc.0",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
+    "jsdoc": "^4.0.3",
+    "next-test-api-route-handler": "^4.0.8",
+    "postcss": "^8",
+    "start-server-and-test": "^2.0.5",
+    "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "tslib": "^2.8.1",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.31.0"
+    "typescript": "^5",
+    "typescript-eslint": "^8.1.0"
   }
 }
