--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c3dlZXBpbmctc3F1aXJyZWwtMC5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_La7NmYaiPoz8FNhWQYSRAB4hJZMTwazenbRmCvknM6
-NEXT_PUBLIC_API_URL=https://fractal-api-zeta.vercel.app/
+NEXT_PUBLIC_API_URL=https://fractal-api-zeta.vercel.app
