--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,8 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c3dlZXBpbmctc3F1aXJyZWwtMC5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_La7NmYaiPoz8FNhWQYSRAB4hJZMTwazenbRmCvknM6
+
+NEXT_PUBLIC_SERVER_URL=
 NEXT_PUBLIC_API_URL=https://fractal-api-zeta.vercel.app
+
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
