--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.17.1",
+    "@mui/styled-engine-sc": "^7.1.0",
     "@paypal/react-paypal-js": "^8.8.3",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-alert-dialog": "^1.1.13",
@@ -63,6 +64,7 @@
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "sonner": "^2.0.3",
+    "styled-components": "^6.1.18",
     "swiper": "^11.2.6",
     "swr": "^2.3.3",
     "tailwind-merge": "^2.6.0",
